--- a/src/index.css
+++ b/src/index.css
@@ -138,3 +138,9 @@ input[type="password"]::-webkit-textfield-decoration-container {
     @apply bg-background text-foreground;
   }
 }
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
