--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,10 @@ input[type="password"]::-webkit-textfield-decoration-container {
   display: none;
 }
 
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 #root {
    max-width: 100%;
    margin: 0 auto;
